# Test

./: .bazelrc  .gitignore  BUILD  MODULE.bazel
apps/cc/: BUILD  main.c
apps/cc/include/: mathlib.h
apps/cc/src/: mathlib.c  mathlib_buggy.c
apps/cc/tests/assert/: BUILD  mathlib_buggy_test.c  mathlib_test.c
apps/cc/tests/boost/: BUILD  test_mathlib.cc  test_mathlib_buggy.cc
apps/cc/tests/catch2/: BUILD  test_mathlib.cc  test_mathlib_buggy.cc
apps/cc/tests/check/: BUILD  mathlib_test.c
apps/cc/tests/criterion/: BUILD  test_mathlib.c  test_mathlib_buggy.c
apps/cc/tests/doctest/: BUILD  test_mathlib.cc  test_mathlib_buggy.cc
apps/cc/tests/gtest/: BUILD  test_mathlib.cc  test_mathlib_buggy.cc
apps/cc/tests/munit/: BUILD  test_mathlib.c  test_mathlib_buggy.c
apps/cc/tests/throw_the_switch/: BUILD  my_config.yml  test_mathlib.c  test_mathlib_buggy.c
apps/cc/tests/unittest_cpp/: BUILD  test_mathlib.cc  test_mathlib_buggy.cc
apps/go/: BUILD
apps/go/src/: mathlib.go
apps/go/tests/: BUILD  mathlib_buggy_test.go  mathlib_test.go
apps/java/com/Math/: BUILD  MathLib.java
apps/java/com/Math/tests/standard/: BUILD  MathBuggyLibTest.java  MathLibTest.java
apps/python/: BUILD
apps/python/src/: mathlib.py
apps/python/tests/doctest/: BUILD  mathlib.py  mathlib_buggy.py
apps/python/tests/pytest/: BUILD  requirements.txt  requirements_lock.txt  test_mathlib.py  test_mathlib_buggy.py
apps/python/tests/unittest/: BUILD  test_mathlib.py  test_mathlib_buggy.py
apps/rust/: BUILD
apps/rust/src/: main.rs
apps/rust/tests/built-in/: BUILD  smoke_test.rs  smoke_test_buggy.rs
tools/: BUILD  preset.bazelrc  unity_test.bzl
